--- a/src/main/resources/templates/paginaEdicao/edicao.html
+++ b/src/main/resources/templates/paginaEdicao/edicao.html
@@ -16,35 +16,27 @@
 		</div>
 
 	</div>
-
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
 	<!-- Header -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
+	<!-- Image -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/@editorjs/simple-image@latest"></script>
-	<!-- Image -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/delimiter@latest"></script>
-	<!-- Delimiter -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
 	<!-- List -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
 	<!-- Checklist -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/quote@latest"></script>
-	<!-- Quote -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/code@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script>
 	<!-- Code -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/code@latest"></script>
 	<!-- Embed -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@latest"></script>
 	<!-- Table -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script>
-	<!-- Link -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/warning@latest"></script>
-	<!-- Warning -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/image@2.3.0"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
 	<!-- Marker -->
-	<script src="https://cdn.jsdelivr.net/npm/@editorjs/inline-code@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script>
+	<!-- Link -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script>
 	<!-- Inline Code -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/inline-code@latest"></script>
 	<script src="/dist/editor.js"></script>
 
 	<script>
@@ -63,6 +55,19 @@
                         'link', 'bold'
                     ]
                 },
+                code: {
+                    class: CodeTool,
+                    shortcut: 'CMD+SHIFT+C'
+                },
+                marker: {
+                    class: Marker,
+                    shortcut: 'CMD+SHIFT+M',
+                },
+                inlineCode: {
+                    class: InlineCode,
+                    shortcut: 'CMD+SHIFT+X',
+                },
+                image: SimpleImage,
                 embed: {
                     class: Embed,
                     inlineToolbar: false,
