--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -30,7 +30,7 @@
 					<form method="post" action="#" th:action="@{/acesso/logar}">
 						<div class="input-group form-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i class="fas fa-user iten"></i></span>
 							</div>
 							<input type="text" class="form-control"
 								placeholder="Digite seu Email" th:name="email">
@@ -38,7 +38,7 @@
 						</div>
 						<div class="input-group form-group">
 							<div class="input-group-prepend">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span class="input-group-text"><i class="fas fa-key iten"></i></span>
 							</div>
 							<input type="password" class="form-control"
 								placeholder="Digite sua Senha" th:name="senha">
