--- a/src/main/resources/static/css/reaverEmail.css
+++ b/src/main/resources/static/css/reaverEmail.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import
+	"https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 
 .login-page {
   width: 360px;
@@ -16,7 +18,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Poppins', sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -27,7 +29,7 @@
   font-size: 14px;
 }
 .form button {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   outline: 0;
   background: #4CAF50;
@@ -94,7 +96,7 @@ body {
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
   background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
