--- a/src/main/resources/static/css/relatorio.css
+++ b/src/main/resources/static/css/relatorio.css
@@ -1,3 +1,6 @@
+@import
+	"https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 @keyframes swing {
   0% {
     transform: rotate(0deg);
@@ -241,7 +244,7 @@ body {
 }
 
 .sidebar-wrapper .sidebar-menu .sidebar-dropdown > a:after {
-  font-family: "Font Awesome 5 Free";
+  font-family: 'Poppins', sans-serif;
   font-weight: 900;
   content: "\f105";
   font-style: normal;
@@ -269,7 +272,7 @@ body {
 
 .sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before {
   content: "\f111";
-  font-family: "Font Awesome 5 Free";
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-style: normal;
   display: inline-block;
