--- a/src/main/resources/templates/cadastro/cadastroInscrito.html
+++ b/src/main/resources/templates/cadastro/cadastroInscrito.html
@@ -13,141 +13,135 @@
 <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <link rel="stylesheet" th:href="@{/css/cadastro.css}" />
+<link rel="stylesheet" th:href="@{/css/layoutBase.css}" />
 <link rel="stylesheet" th:href="@{/css/nav.css}" />
-<style type="text/css">
-
-
-
-</style>
 </head>
 <body>
 	<header th:replace="fragments/header :: cabecalho"></header>
 	<br>
-	<div class="container" >
-		<div class="card bg-light">
-			<article class="card-body mx-auto" style="max-width: 400px;">
-				<h4 class="card-title mt-3 text-center">Cria sua conta
-					gratuitamente!</h4>
-				<form action="#" th:action="@{/inscrito/cadastro}"
-					th:object="${inscrito}" method="post">
+	<div class="container">
+		<article class="card-body mx-auto" style="max-width: 400px;">
+			<h4 class="card-title mt-3 text-center">Cria sua conta
+				gratuitamente!</h4>
+			<form action="#" th:action="@{/inscrito/cadastro}"
+				th:object="${inscrito}" method="post">
 
-					<span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"
-						class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-user"></i>
-							</span>
-						</div>
-						<input name="nome" class="form-control"
-							placeholder="Nome completo" type="text" th:field="*{nome}">
+				<span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"
+					class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-user"></i>
+						</span>
 					</div>
+					<input name="nome" class="form-control" placeholder="Nome completo"
+						type="text" th:field="*{nome}">
+				</div>
 
-					<!-- form-group// -->
+				<!-- form-group// -->
 
-					<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-						class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-envelope"></i>
-							</span>
-						</div>
-						<input name="" class="form-control"
-							placeholder="Endereço de email" type="email" th:field="*{email}">
+				<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+					class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-envelope"></i>
+						</span>
 					</div>
+					<input name="" class="form-control" placeholder="Endereço de email"
+						type="email" th:field="*{email}">
+				</div>
 
-					<!-- form-group// -->
+				<!-- form-group// -->
 
-					<span th:if="${#fields.hasErrors('datanasc')}"
-						th:errors="*{datanasc}" class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-calendar"
-								aria-hidden="true"></i>
-							</span>
-						</div>
-						<input name="" class="form-control"
-							placeholder="Data de nascimento" type="date" th:name="data">
+				<span th:if="${#fields.hasErrors('datanasc')}"
+					th:errors="*{datanasc}" class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-calendar"
+							aria-hidden="true"></i>
+						</span>
 					</div>
+					<input name="" class="form-control"
+						placeholder="Data de nascimento" type="date" th:name="data">
+				</div>
 
-					<!-- form-group// -->
+				<!-- form-group// -->
 
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i
-								class="fa fa-venus-mars" aria-hidden="true"></i>
-							</span>
-						</div>
-						<select class="custom-select" th:field="*{sexo}"
-							style="max-width: 120px;">
-							<option th:each="sexo : ${listaSexo}" th:value="${sexo}"
-								th:text="${sexo.descricao}"></option>
-						</select>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-venus-mars"
+							aria-hidden="true"></i>
+						</span>
 					</div>
+					<select class="custom-select" th:field="*{sexo}"
+						style="max-width: 120px;">
+						<option th:each="sexo : ${listaSexo}" th:value="${sexo}"
+							th:text="${sexo.descricao}"></option>
+					</select>
+				</div>
 
-					<!-- form-group// -->
+				<!-- form-group// -->
 
-					<span th:if="${#fields.hasErrors('cpf')}" th:errors="*{cpf}"
-						class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i
-								class="fa fa-address-card" aria-hidden="true"></i>
-							</span>
-						</div>
-						<input name="" class="form-control" placeholder="CPF" type="text"
-							th:field="*{cpf}">
+				<span th:if="${#fields.hasErrors('cpf')}" th:errors="*{cpf}"
+					class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i
+							class="fa fa-address-card" aria-hidden="true"></i>
+						</span>
 					</div>
+					<input name="" class="form-control" placeholder="CPF" type="text"
+						th:field="*{cpf}">
+				</div>
 
-					<!-- form-group end.// -->
+				<!-- form-group end.// -->
 
 
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-asterisk"
-								aria-hidden="true"></i>
-						</div>
-						<input name="" class="form-control" placeholder="Nickname"
-							type="text" th:field="*{nickname}">
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-asterisk"
+							aria-hidden="true"></i>
 					</div>
+					<input name="" class="form-control" placeholder="Nickname"
+						type="text" th:field="*{nickname}">
+				</div>
 
-					<!-- form-group end.// -->
+				<!-- form-group end.// -->
 
-					<span th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"
-						class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-lock"></i>
-							</span>
-						</div>
-						<input class="form-control" placeholder="Insira sua senha"
-							type="password" name="senha" th:field="*{senha}">
+				<span th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"
+					class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-lock"></i>
+						</span>
 					</div>
+					<input class="form-control" placeholder="Insira sua senha"
+						type="password" name="senha" th:field="*{senha}">
+				</div>
 
-					<!-- form-group// -->
+				<!-- form-group// -->
 
-					<span th:if="${#fields.hasErrors('confirmaSenha')}"
-						th:errors="*{confirmaSenha}" class="text-danger"></span>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-lock"></i>
-							</span>
-						</div>
-						<input class="form-control" placeholder="Repita sua senha"
-							type="password" name="validaSenha" th:field="*{confirmaSenha}">
+				<span th:if="${#fields.hasErrors('confirmaSenha')}"
+					th:errors="*{confirmaSenha}" class="text-danger"></span>
+				<div class="form-group input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text icon"> <i class="fa fa-lock"></i>
+						</span>
 					</div>
+					<input class="form-control" placeholder="Repita sua senha"
+						type="password" name="validaSenha" th:field="*{confirmaSenha}">
+				</div>
 
-					<!-- form-group// -->
-					<div class="text-center">
-						<button type="submit" class="btn btn-primary text-center">Registrar-se!</button>
-					</div>
-					<br>
-					<p class="text-center">
-						Já tem uma conta? <a th:href="@{/acesso/login}" href="#">Logue
-							aqui!</a>
-					</p>
-				</form>
-			</article>
-		</div>
+				<!-- form-group// -->
+				<div class="text-center">
+					<button type="submit" class="btn btn-dark text-center">Registrar-se!</button>
+				</div>
+				<br>
+				<p class="text-center">
+					Já tem uma conta? <a th:href="@{/acesso/login}" href="#">Logue
+						aqui!</a>
+				</p>
+			</form>
+		</article>
 	</div>
 	<br>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
