--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,56 +1,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
 </head>
 <body>
 	<header th:fragment="cabecalho">
-		<nav class="navbar navbar-expand-lg navbar-light" style="background: #FFF819;">
+		<nav class="navbar navbar-expand-lg navbar-light navegacao">
 			<a class="navbar-brand" href="#"><img alt="logo" width="60px" height="52px"  th:src="@{/images/logo.png}"></a>
-			<button class="navbar-toggler" id="btn1" type="button" data-toggle="collapse"
+			<button class="navbar-toggler botao" id="btn1" type="button" data-toggle="collapse"
 				data-target="#conteudoNavbarSuportado"
 				aria-controls="conteudoNavbarSuportado" aria-expanded="false"
 				aria-label="Alterna navegação">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
-			<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active" ><a class="nav-link" href="#" style="color: #000000; text-shadow: gray;">Home
-							<span class="sr-only">(página atual)</span>
-					</a></li>
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+			<div class="collapse navbar-collapse conteudo" id="conteudoNavbarSuportado">
+				<ul class="navbar-nav mr-auto link">
+					<li class="nav-item"><a class="nav-link items" style="color: white !important;" th:href="@{/home}" href="#">Home</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle items" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false" style="color: #000000; text-shadow: gray;"> Conteúdos </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #000000;">
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Programação</a> 
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Banco de dados</a>
+						aria-expanded="false" style="color: white !important;"> Conteúdos </a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Programação</a> 
+							<a class="dropdown-item" href="#">Banco de dados</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Engenharia de software</a>
-						</div></li>
+							<a class="dropdown-item"  href="#">Engenharia de software</a>
+						</div>
 					</li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/inscrito/cadastro}" href="#" style="color: #000000; text-shadow: gray;">Cadastre-se!</a></li>
+					<li class="nav-item"><a class="nav-link items" style="color: white !important;" th:href="@{/inscrito/cadastro}" href="#">Cadastre-se!</a></li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search"
-						placeholder="Pesquisar" aria-label="Pesquisar">
-					<button class="btn btn btn-dark my-2 my-sm-0" type="submit" style="color: #FFF819;">Pesquisar</button>
+					<input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+					<button class="btn btn-dark my-2 my-sm-0" type="submit">Pesquisar</button>
 				</form>
 				<ul class="navbar-nav pull-right">
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false"><i class="fa fa-user-circle"
-							aria-hidden="true" style="color: #000000; text-shadow: gray;"></i></a>
-						<div class="dropdown-menu dropdown-menu-right" 
-							aria-labelledby="navbarDropdown" style="background-color: #000000;">
-							<a class="dropdown-item menu1" th:href="@{/acesso/login}" href="#" style="color: #FFF819;">Logar</a>
-						</div></li>
+						aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="color: white !important;">
+							<a class="dropdown-item" th:href="@{/acesso/login}" href="#">Logar</a>
+						</div>
 					</li>
 				</ul>
 			</div>
-
 		</nav>
 	</header>
 </body>
