Ajuste da publicacao para entrar melhor na regra de negocio

--- a/src/main/resources/templates/paginaEdicao/edicao.html
+++ b/src/main/resources/templates/paginaEdicao/edicao.html
@@ -25,46 +25,68 @@
 <body>
 	<header th:replace="fragments/header :: cabecalho"></header>
 	<br>
-	<div th:replace="paginaEdicao/editFragment/instructionBar :: instructionBar"></div>
+	<div
+		th:replace="paginaEdicao/editFragment/instructionBar :: instructionBar"></div>
 	<br>
-	<div class="container conteudo">
+	<form action="#" th:action="@{/publicacao/salvarPublicacao}"
+		enctype="multipart/form-data" method="post">
+		<div
+			th:replace="paginaEdicao/editFragment/arquivosFragment :: arquivosFragment"></div>
 		<div class="ce-example">
+
 			<div id="header">
 				<h2 style="text-align: center;">Crie seu artigo aqui</h2>
 			</div>
 			<div id="editorjs"></div>
 			<div class="botaoSalvar">
-				<button class="btn btn-dark btnSalvar" onclick="salvar()">SalvarArtigo</button>
+				<button type="submit" class="btn btn-dark btnSalvar"
+					onclick="salvar()">SalvarArtigo</button>
 			</div>
-
 		</div>
+	</form>
+	<!-- Header -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
+	<!-- Image -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/@editorjs/simple-image@latest"></script>
+	<!-- List -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
+	<!-- Checklist -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script>
+	<!-- Code -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/code@latest"></script>
+	<!-- Embed -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@latest"></script>
+	<!-- Table -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
+	<!-- Marker -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script>
+	<!-- Link -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script>
+	<!-- Inline Code -->
+	<script src="https://cdn.jsdelivr.net/npm/@editorjs/inline-code@latest"></script>
 
-		<!-- Header -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
-		<!-- Image -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/@editorjs/simple-image@latest"></script>
-		<!-- List -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
-		<!-- Checklist -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script>
-		<!-- Code -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/code@latest"></script>
-		<!-- Embed -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/embed@latest"></script>
-		<!-- Table -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
-		<!-- Marker -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script>
-		<!-- Link -->
-		<script src="https://cdn.jsdelivr.net/npm/@editorjs/link@latest"></script>
-		<!-- Inline Code -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/@editorjs/inline-code@latest"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+	<script src="/dist/editor.js"></script>
+	<script>
 
-		<script src="/dist/editor.js"></script>
-		<script>
-    
+   		$('.inputGrupo').on('change',function(){
+        	//get the file name
+        	var fileName = $(this).val();
+        	//replace the "Choose a file" label
+      	  	$(this).next('.custom-file-label').html(fileName);
+    	})
+    	
         const editor = new EditorJS({
             holder: 'editorjs',
 
@@ -108,7 +130,7 @@
        function salvar(){
             editor.save().then((outputData) => {
             	  var xhr = new XMLHttpRequest();
-            	  xhr.open('POST', 'http://localhost:8080/salvarEdicao', true);
+            	  xhr.open('POST', 'http://localhost:8080/publicacao/salvarEdicao', true);
             	  xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
             	  xhr.send(JSON.stringify(outputData));
                 console.log('Article data: ', JSON.stringify(outputData));
@@ -116,18 +138,8 @@
                 console.log('Saving failed', error)
             })
         };
-            
+        
     </script>
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"></script>
+
 </body>
 </html>
