--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,9 +37,9 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
+						aria-expanded="false"><i class="fa fa-user-circle" style="color: white !important;" aria-hidden="true"></i></a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="color: white !important;">
-							<a class="dropdown-item" th:href="@{/acesso/login}" href="#">Logar</a>
+							<a class="dropdown-item" th:href="@{/login}" href="#">Logar</a>
 						</div>
 					</li>
 				</ul>
